// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteRequestQueryParams overwrite overwrite the request query param with an empty when overwrite is true 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
  Object {
    "disabled": false,
    "key": "id",
    "value": "",
  },
]
`;

exports[`overwriteRequestQueryParams should append the request query param when overwrite is false 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "truefoo",
  },
]
`;

exports[`overwriteRequestQueryParams should append the request query param when overwrite is true 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "foo",
  },
]
`;

exports[`overwriteRequestQueryParams should disable the request query param 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": true,
    "key": "raw",
    "value": "true",
  },
]
`;

exports[`overwriteRequestQueryParams should insert the query param variable with description, if key not found 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
  Object {
    "description": Object {
      "content": "Additional query param",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "add-a-query-param",
    "value": "foo-bar-baz",
  },
]
`;

exports[`overwriteRequestQueryParams should insert the query param variable with true insert option, if key not found 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
  Object {
    "disabled": false,
    "key": "add-a-query-param",
    "value": "foo-bar-baz",
  },
]
`;

exports[`overwriteRequestQueryParams should insert the query param variable, if key not found 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
  Object {
    "disabled": false,
    "key": "add-a-query-param",
    "value": "foo-bar-baz",
  },
]
`;

exports[`overwriteRequestQueryParams should not insert the query param, if key found 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
  Object {
    "disabled": false,
    "key": "id",
    "value": "foo-bar-baz",
  },
]
`;

exports[`overwriteRequestQueryParams should not remove any the request query param, when a absent key 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the query param boolean variable with string value 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "false",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the query param number variable with string value 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "-1",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the query param variable with a blank value 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the query param variable with a null value 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the request query param 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "foo",
  },
]
`;

exports[`overwriteRequestQueryParams should remove to the query param when remove is true 1`] = `Array []`;

exports[`overwriteRequestQueryParams should skip the query param variable with false insert option, if key not found 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "true",
  },
]
`;
